# ConstructionCalc

./: .gitignore  CLAUDE.md  build.sh
.claude/: settings.local.json
FracCalc/: FracCalc-Bridging-Header.h  FracCalcApp.swift  fraccalc_core.swift
FracCalc.xcodeproj/: project.pbxproj
FracCalc.xcodeproj/xcuserdata/ammullig.xcuserdatad/xcschemes/: xcschememanagement.plist
FracCalc/FracCalc/: ContentView.swift  FracCalcApp.swift
FracCalc/FracCalc.xcodeproj/: project.pbxproj
FracCalc/Models/: CalculatorState.swift  HistoryEntry.swift
FracCalc/Services/: FracCalcBridge.swift
FracCalc/Settings/: SettingsView.swift
FracCalc/ViewModels/: CalculatorViewModel.swift  HistoryViewModel.swift
FracCalc/Views/: CalculatorView.swift  HistoryView.swift  KeypadView.swift
FracCalc/Views/Components/: CalcButton.swift
FracCalctmp/Models/: CalculatorState.swift  HistoryEntry.swift
FracCalctmp/ViewModels/: CalculatorViewModel.swift
FracCalctmp/Views/: CalculatorView.swift  DisplayView.swift
docs/plans/: 2026-03-04-fraccalc-design.md  2026-03-04-fraccalc-implementation.md  2026-03-13-custom-fraction-hotkeys-design.md
docs/superpowers/plans/: 2026-04-14-persistent-memory-banks.md
docs/superpowers/specs/: 2026-04-14-persistent-memory-banks-design.md
fraccalc-core/: Cargo.toml
fraccalc-core/src/: formatter.rs  lib.rs  measurement.rs  parser.rs  precision.rs
fraccalc-core/tests/: formatter_tests.rs  measurement_tests.rs  parser_tests.rs  precision_tests.rs  property_tests.proptest-regressions  property_tests.rs
(+1 files in other folders)
